--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,16 @@ plugins {
 
 group = 'com.github.mvollebregt'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '15'
+sourceCompatibility = '14'
 
 repositories {
 	mavenCentral()
 }
 
 dependencies {
+	// TODO: try newer versions of graphql-java and graphql-java-spring-boot-starter-webmvc
+	implementation 'com.graphql-java:graphql-java:11.0'
+	implementation 'com.graphql-java:graphql-java-spring-boot-starter-webmvc:1.0'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
