--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ dependencies {
 	implementation 'com.graphql-java:graphql-java:16.1'
 	implementation 'com.graphql-java:graphql-java-spring-boot-starter-webmvc:2.0'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.hsqldb:hsqldb:2.5.1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
